--- a/stuff/anything/index.html
+++ b/stuff/anything/index.html
@@ -66,7 +66,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="../../topsecret.html">How to do Anything
+                <a class="navbar-brand" href="../../topsecret.html">How To Do Anything
                 </a>
 
 
@@ -124,11 +124,11 @@
                 <center>
                     <div class="hidden-xs hidden-sm">
                         <!--Hidden on Mobile-->
-                        <p style="font-size:750%;word-wrap:break-word;">How to do Anything</p>
+                        <p style="font-size:750%;word-wrap:break-word;">How To Do Anything</p>
                     </div>
                     <div class="hidden-md hidden-lg">
                         <!-- Hidden on Non-Mobile-->
-                        <h1><strong>How to do Anything</strong></h1>
+                        <h1><strong>How To Do Anything</strong></h1>
                     </div>
                     <!--Candies are shown here, if they don't load, the text is shown-->
                     <div id="candy" class="subtext">according to the internet</div>
@@ -149,7 +149,7 @@
         <div class="footer ">
             <center>
                 <p>
-                    Made by StormyJet. Uses code from Bootstrap. This isn't a lawyer service, and some things may not be true. Find one? Send it to me on Twitter, <a href="http://twitter.com/stormyjet">@StormyJet</a>.
+                    Made by StormyJet. Uses code from Bootstrap. This isn't a lawyer service, and some things may not be true. Find one? Send it to me on Twitter, <a href="http://twitter.com/stormyjet">@StormyJet</a>. Please don't use this as justification in court, that'd be dumb.
                 </p>
 
             </center>
