--- a/stuff/anything/howto/template.html
+++ b/stuff/anything/howto/template.html
@@ -30,7 +30,7 @@
     <meta name="msapplication-TileColor" content="#000000">
     <meta name="msapplication-TileImage" content="/core/img/mstile-144x144.png">
     <meta name="msapplication-config" content="/core/img/browserconfig.xml">
-    <title>HTDA: Be essentially invisible</title>
+    <title>HTDA: TEMPLATE</title>
 </head>
 <!--[if lt IE 7]>
             <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
@@ -75,7 +75,7 @@
                 <ul class="nav navbar-nav">
                     <li><a href="index.html">Home</a>
                     </li>
-                    <li class="active"><a href="#">How To: Be essentially invisible</a>
+                    <li class="active"><a href="#">How To: TEMPLATE</a>
                     </li>
                     <!--<li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Things I Made<span class="caret"></span></a>
@@ -125,26 +125,26 @@
                     <h1>How to:</h1>
             </div>
             <!--Candies are shown here, if they don't load, the text is shown-->
-            <div id="candy" class="subtext">Essentially be invisible</div>
-            <p style="font-size">according to <a href="http://www.reddit.com/r/funny/comments/2c1qqk/stopping_a_bike_thief/cjb1i9k">reddit</a>
+            <div id="candy" class="subtext">TEMPLATE</div>
+            <p style="font-size">according to <a href="insert url here">TEMPLATE</a>
             </p>
 
         </div>
         <!--end the gray box-->
-        <p class="lead">How to be essentially invisible:</p>
+        <p class="lead">How to TEMPLATE:</p>
         <br>
         <br>
         <div class="jumbotron">
-            <strong>1:</strong> Get a orange/yellow vest that roadworkers use, its best if you have a dirty one
+            <strong>1:</strong> Words
             <br>
-            <strong>2:</strong> Get a white hard hat
+            <strong>2:</strong> Words
             <br>
-            <strong>Optional:</strong> Get a cell phone case that you can clip to you belt Congratulations! You are now essentially invisible and you can now do pretty much anything you want.
+            <strong>Optional:</strong> Words
             <hr>
             <strong>ALTERNATE METHOD:</strong>
-            <strong>Step 1:</strong> Get a clipboard
+            <strong>Step 1:</strong> Words
             <br>
-            <strong>2:</strong> Put on a annoyed/angry expression
+            <strong>2:</strong> Words
             <br>Congratulations! You're Done!
         </div>
         </center>
