update main page

--- a/stuff/anything/index.html
+++ b/stuff/anything/index.html
@@ -140,7 +140,10 @@
             <br>
             <div class="jumbotron">
                 <strong>The newest How To's:</strong>
-                <kbd>coming soon</kbd>
+                <br>
+                <a href="howto/beinvisible.html">How to be essentially invisible</a>
+                <br>
+                <kbd>more coming soon</kbd>
             </div>
             </center>
         </div>
