--- a/stuff/anything/index.html
+++ b/stuff/anything/index.html
@@ -75,8 +75,8 @@
                 <ul class="nav navbar-nav">
                     <li class="active"><a href="#">Home</a>
                     </li>
-                    <li><a href="list.html">List</a>
-                    </li>
+                    <!--<li><a href="list.html">List</a>
+                    </li>-->
                     <!--<li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Things I Made<span class="caret"></span></a>
                         <ul class="dropdown-menu" role="menu">
@@ -139,9 +139,9 @@
             <br>
             <br>
             <div class="jumbotron">
-                <strong>The newest How To's:</strong>
+                <strong>How To:</strong>
                 <br>
-                <a href="howto/beinvisible.html">How to be essentially invisible</a>
+                <a href="howto/beinvisible.html">Be essentially invisible</a> (reddit)
                 <br>
                 <kbd>more coming soon</kbd>
             </div>
