--- a/stuff/anything/howto/beinvisible.html
+++ b/stuff/anything/howto/beinvisible.html
@@ -139,10 +139,12 @@
             <br>
             <strong>2:</strong> Get a white hard hat
             <br>
-            <strong>Optional:</strong> Get a cell phone case that you can clip to you belt Congratulations! You are now essentially invisible and you can now do pretty much anything you want.
+            <strong>Optional:</strong> Get a cell phone case that you can clip to you belt
+            <br>Congratulations! You are now essentially invisible and you can now do pretty much anything you want.
             <hr>
             <strong>ALTERNATE METHOD:</strong>
-            <strong>Step 1:</strong> Get a clipboard
+            <br>
+            <strong>1:</strong> Get a clipboard
             <br>
             <strong>2:</strong> Put on a annoyed/angry expression
             <br>Congratulations! You're Done!
