--- a/stuff/anything/howto/template.html
+++ b/stuff/anything/howto/template.html
@@ -73,7 +73,7 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a href="index.html">Home</a>
+                    <li><a href="../index.html">Home</a>
                     </li>
                     <li class="active"><a href="#">How To: TEMPLATE</a>
                     </li>
