--- a/404.html
+++ b/404.html
@@ -53,7 +53,8 @@
                             document.write(document.URL);
                         </script>
                         isn't even real.</p>
-                    <p class="lead"><a href="http://stormyjet.com">Wanna go to the home page?</a>
+                    Maybe you're lost? Click
+                    <p class="lead"><a href="http://stormyjet.com/lost">here</a> for a site map of sorts.
                     </p>
                 </body>
             </center>
