--- a/lost.html
+++ b/lost.html
@@ -30,7 +30,7 @@
     <meta name="msapplication-TileColor" content="#000000">
     <meta name="msapplication-TileImage" content="/core/img/mstile-144x144.png">
     <meta name="msapplication-config" content="/core/img/browserconfig.xml">
-    <title>Stormy's Website</title>
+    <title>I'm Lost!</title>
 </head>
 
 <body>
@@ -51,7 +51,6 @@
             <p style="font-size:22px"><strong>Uh-Oh.</strong> Looks like something bad happened, fix it?</p>
         </div>-->
     </center>
-
     <!--Nav Begins Here-->
     <div class="navbar navbar-default navbar-fixed-top" role="navigation">
         <div class="container">
@@ -69,14 +68,13 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a href="index.html">Home</a>
+                    <li><a href="http://stormyjet.com">Home</a>
                     </li>
-                    <li><a href="blog.html">Blog</a>
+                    <li><a href="http://stormyjet.com/blog.html">Blog</a>
                     </li>
-                    <li><a href="things.html">Things I Made</a>
+                    <li><a href="http://stormyjet.com/things.html">Things I Made</a>
                     </li>
-                    <li class="active"><a href="#">To Do List</a>
-                    </li>
+
                     <!--<li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Things I Made<span class="caret"></span></a>
                         <ul class="dropdown-menu" role="menu">
@@ -100,7 +98,7 @@
                     <li>
                         <a href="http://stormyjet.com/sNet">sNet</a>
                     </li>-->
-                    <li class="bg-info"><a href="meteor/index.html">Meteor Game</a>
+                    <li class="bg-info"><a href="http://stormyjet.com/meteor/index.html">Meteor Game</a>
                     </li>
                 </ul>
             </div>
@@ -121,16 +119,30 @@
         <div>
             <div class="jumbotron">
                 <center>
-                    <p style="font-size: 750%;word-wrap:break-word;">ToDo List</p>
+                    <p style="font-size: 750%;word-wrap:break-word;">You're Lost!</p>
                     <!--Candies are shown here, if they don't load, the text is shown-->
                     <div id="candy" style="font-size: 200%;"></div>
 
             </div>
             <!--end the gray box-->
-            <p class="lead">Hey there! This is a list of things I have to do here, I make it publicily available so I don't make things twice
-                <br>Add More YM Jokes
-                <br>Make a guide to reading HTML Color Codes
+            <p class="lead">Oh No! You're lost. Here's some links to help you on your way.
                 <br>
+                <a href="http://stormyjet.com/">The homepage</a>
+                <br>
+                <a href="http://stormyjet.com/meteor">Meteor Game Home</a>
+                <br>
+                <a href="http://stormyjet.com/stuff/anything">How To Do Anything Home</a>
+                <a href="http://stormyjet.com/stuff/pokecrate">Pokecrate Home</a>
+                <br>
+                <hr>None of them? Here are links to other things I have made.
+                <br>
+                <a href="http://stormyjet.com/random/cancer">Cancer Checker</a>
+                <br>
+                <a href="http://stormyjet.com/random/YourMom">Your Mom joke Generator</a>
+                <br>
+                <a href="http://stormyjet.com/random/NubOrNot">Nub or Not?</a>
+                <br>
+                <hr>Still none of them? Thats nearly every page of this site, so why don't you try going to one of the homepages and exploring from there.
             </p>
             </center>
         </div>
