--- a/index.html
+++ b/index.html
@@ -152,10 +152,7 @@
                 <br>
                 <a href="stuff/pokecrate/index.html">I also redesigned the website for Pokecrate once.</a>
                 <br>
-                <a href="random/NubOrNot.html">The Useful Page to tell you if you are a nub or not.</a>
-                <br>
-                <a href="random/YourMom.html">And the Your Mom Joke Maker</a>  <kbd>[Under Construction]</kbd>
-                <br>I also make <em>very</em> bad <a href="https://www.youtube.com/user/ItsStormyJet">YouTube</a> videos.
+                <kbd><a href="things.html">Click here for more things that I made.</a></kbd>
                 <br>If you ask kindly enough at my <a href="http://twitter.com/stormyjet">Twitter</a>, I may be able to make something for you. Maybe.
                 <br>
             </p>
