--- a/stuff/anything/howto/template.html
+++ b/stuff/anything/howto/template.html
@@ -131,7 +131,9 @@
             </div>
         </div>
         <!--end the gray box-->
-        <p class="lead">How to TEMPLATE:</p>
+        <center>
+            <p class="lead">How to TEMPLATE:</p>
+        </center>
         <br>
         <br>
         <div class="jumbotron">
