--- a/index.html
+++ b/index.html
@@ -107,10 +107,9 @@
                 <ul class="nav navbar-nav navbar-right">
                     <!--<li>
                         <p class="navbar-text navbar-right">Under Construction |</p>
-                    </li>
-                    <li>
-                        <a href="http://stormyjet.com/sNet">sNet</a>
                     </li>-->
+                    <li class="bg-danger"><a href="stuff/anything/">HTDA</a>
+                    </li>
                     <li class="bg-info"><a href="meteor/index.html">Meteor Game</a>
                     </li>
                 </ul>
