--- a/meteor/index.html
+++ b/meteor/index.html
@@ -46,6 +46,8 @@
                     <!--<li>
                         <a href="http://stormyjet.com/sNet">sNet</a>
                     </li>-->
+                    <li class="bg-danger"><a href="../stuff/anything/">HTDA</a>
+                    </li>
                     <li class="bg-info"><a href="../index.html">Stormy's Wesbite</a>
                     </li>
                 </ul>
@@ -63,7 +65,7 @@
                     <br>Are you viewing this on a mobile device?
                     <br>
                     <a class="btn btn-primary " href="mobile.html" role="button ">Yes</a>
-                    If not, ignore this warning.
+                    <br>If not, ignore this warning.
                 </div>
             </div>
             <!--<center><h1><h1>Meteor Game</h1></h1>-->
