--- a/stuff/anything/index.html
+++ b/stuff/anything/index.html
@@ -100,7 +100,7 @@
                     <li>
                         <a href="http://stormyjet.com/sNet">sNet</a>
                     </li>-->
-                    <li class="bg-info"><a href="../../index.html">StormyJet.com</a>
+                    <li class="bg-danger"><a href="../../index.html">StormyJet.com</a>
                     </li>
                 </ul>
             </div>
