move it to a dedicated folder

--- a/blog.html
+++ b/blog.html
@@ -92,7 +92,7 @@
                     <li>
                         <a href="http://stormyjet.com/sNet">sNet</a>
                     </li>-->
-                    <li class="bg-danger"><a href="stuff/anything/">HTDA</a>
+                    <li class="bg-danger"><a href="htda/">HTDA</a>
                     </li>
                     <li class="bg-info"><a href="meteor/index.html">Meteor Game</a>
                     </li>
