--- a/htda/howto/beinvisible.html
+++ b/htda/howto/beinvisible.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-<link href="core/css/bootstrap.min.css" rel="stylesheet">
-<script src="core/js/google.js"></script>
-<script src="core/js/bootstrap.min.js"></script>
+<link href="../../core/css/bootstrap.min.css" rel="stylesheet">
+<script src="../../core/js/google.js"></script>
+<script src="../../core/js/bootstrap.min.js"></script>
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -30,8 +30,11 @@
     <meta name="msapplication-TileColor" content="#000000">
     <meta name="msapplication-TileImage" content="/core/img/mstile-144x144.png">
     <meta name="msapplication-config" content="/core/img/browserconfig.xml">
-    <title>Stormy's Website</title>
+    <title>HTDA: Be essentially invisible</title>
 </head>
+<!--[if lt IE 7]>
+            <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
+        <![endif]-->
 
 <body>
     <center>
@@ -51,6 +54,8 @@
             <p style="font-size:22px"><strong>Uh-Oh.</strong> Looks like something bad happened, fix it?</p>
         </div>-->
     </center>
+
+
     <!--Nav Begins Here-->
     <div class="navbar navbar-default navbar-fixed-top" role="navigation">
         <div class="container">
@@ -61,18 +66,16 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">Stormy's Website
+                <a class="navbar-brand" href="../../topsecret.html">How To Do Anything
                 </a>
 
 
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a href="index.html">Home</a>
+                    <li><a href="../index.html">Home</a>
                     </li>
-                    <li><a href="blog.html">Blog</a>
-                    </li>
-                    <li class="active"><a href="#">Things I Made</a>
+                    <li class="active"><a href="#">How To: Be essentially invisible</a>
                     </li>
                     <!--<li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Things I Made<span class="caret"></span></a>
@@ -88,7 +91,7 @@
                             <li><a href="https://github.com/stormyjet/stormyjet.github.io">Source on GitHub</a>
                             </li>
                         </ul>
-                        </li>-->
+                    </li>-->
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <!--<li>
@@ -97,9 +100,7 @@
                     <li>
                         <a href="http://stormyjet.com/sNet">sNet</a>
                     </li>-->
-                    <li class="bg-danger"><a href="htda/">HTDA</a>
-                    </li>
-                    <li class="bg-info"><a href="meteor/index.html">Meteor Game</a>
+                    <li class="bg-danger"><a href="../../index">StormyJet.com</a>
                     </li>
                 </ul>
             </div>
@@ -108,6 +109,7 @@
     </div>
     <!--Nav ends here-->
     <center>
+
         <p class="nocss ">Whoa there.
             <br>Looks like the page didn't load properly.
             <br>Click <a href="index.html ">Here</a> to reload the page. Hopefully it works! Sorry for the inconvenience
@@ -120,81 +122,61 @@
         <div>
             <div class="jumbotron">
                 <center>
-                    <p style="font-size: 750%;word-wrap:break-word;">Things I made.</p>
+                    <h1>How to:</h1>
+
                     <!--Candies are shown here, if they don't load, the text is shown-->
-                    <div id="candy" style="font-size: 200%;"></div>
-
-            </div>
-            <!--end the gray box-->
-            <p class="lead">Hello! These are the things I have made and are readily available to view online!
-                <br>
-                <a href="random/cancer.html">The free online cancer checker</a>
-                <br>
-                <a href="stuff/pokecrate/index.html">I redesigned the website for Pokecrate once.</a>
-                <br>
-                <a href="random/NubOrNot.html">The Useful Page to tell you if you are a nub or not.</a>
-                <br>
-                <a href="random/YourMom.html">And the Your Mom Joke Maker</a>  <kbd>[Under Construction]</kbd>
-                <br>I also make <em>very</em> bad <a href="https://www.youtube.com/user/ItsStormyJet">YouTube</a> videos.
-                <br>I also make and sometimes maintain a game called <a href="meteor/index.html">Meteor Game</a>. It's quite hard.
-                <br>I'm in the process of making <a href="stuff/anything/index.html">How To Do Anything</a>. A guide on, well, how to do anything! <kbd>[Under Construction]</kbd>
-                <br>You can stalk me at my<a href="http://twitter.com/stormyjet"> Twitter </a>and not Facebook because I don't have one.
-                <br>
-            </p>
-            </center>
-        </div>
-        <hr>
-        <!-- 
-        <div class="row ">
-            <div class="col-lg-4 ">
-                <h2>Meteor Game</h2>
-                <p>Meteor Game is a game that I made for no reason. See more info on the site.</p>
-                <p><a class="btn btn-primary " href="meteor/index.html" role="button ">View details &raquo;</a>
-                </p>
-            </div>
-            <div class="col-lg-4 ">
-                <h2>Hiring</h2>
-
-                <p>You can contact me at
-                    <br>
-                    <kbd>business 'at' this domain</kbd>
-                    <br>and we can work things out if you ever need a crappy website like this one.
-                    <p>
-
+                    <div id="candy" class="subtext">Essentially be invisible</div>
+                    <p style="font-size">according to <a href="http://www.reddit.com/r/funny/comments/2c1qqk/stopping_a_bike_thief/cjb1i9k">reddit</a>
                     </p>
             </div>
-            <div class="col-lg-4 ">
-                <h2>Blog</h2>
-                <p>I have one of those.</p>
-                <p><a class="btn btn-primary " href="blog.html" role="button ">Go now &raquo;</a>
-                </p>
-            </div>
-        </div>-->
-        <br>
-        <hr>
-        <!-- Footer Begins Here -->
-        <div class="footer ">
-            <center>
-                <p>
-                    Made by StormyJet. Uses code from Bootstrap.
-                </p>
-
-            </center>
         </div>
+        <!--end the gray box-->
+        <center>
+            <p class="lead">How to be essentially invisible:</p>
+        </center>
+        <br>
+        <br>
+        <div class="jumbotron">
+            <strong>1:</strong> Get a orange/yellow vest that roadworkers use, its best if you have a dirty one
+            <br>
+            <strong>2:</strong> Get a white hard hat
+            <br>
+            <strong>Optional:</strong> Get a cell phone case that you can clip to you belt
+            <br>Congratulations! You are now essentially invisible and you can now do pretty much anything you want.
+            <hr>
+            <strong>ALTERNATE METHOD:</strong>
+            <br>
+            <strong>1:</strong> Get a clipboard
+            <br>
+            <strong>2:</strong> Put on a annoyed/angry expression
+            <br>Congratulations! You're Done!
+        </div>
+        </center>
+    </div>
+    <hr>
+    <!-- Footer Begins Here -->
+    <div class="footer ">
+        <center>
+            <p>
+                Made by StormyJet. Uses code from Bootstrap. This isn't a lawyer service, and some things may not be true. Find one? Send it to me on Twitter, <a href="http://twitter.com/stormyjet">@StormyJet</a>. Please don't use this as justification in court, that'd be dumb.
+            </p>
+
+        </center>
+    </div>
 
     </div>
     <!-- /container -->
 
 </body>
 <!--Core JS and CSS stuff. Placed at the bottom because I can put it there-->
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
 <script>
-    window.jQuery || document.write('<script src="core/js/vendor/jquery-1.8.2.min.js"><\/script>')
+    window.jQuery || document.write('<script src="../../../core/js/vendor/jquery-1.8.2.min.js"><\/script>')
 </script>
 <!--<script src="core/js/vendor/bootstrap.min.js"></script>-->
-<script src="core/js/main.js"></script>
+<script src="../../core/js/main.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-<script src="core/js/docs.min.js"></script>
+<script src="../../core/js/docs.min.js"></script>
 </body>
 
 </html>
