--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                     <!--<li>
                         <p class="navbar-text navbar-right">Under Construction |</p>
                     </li>-->
-                    <li class="bg-danger"><a href="stuff/anything/">HTDA</a>
+                    <li class="bg-danger"><a href="htda/">HTDA</a>
                     </li>
                     <li class="bg-info"><a href="meteor/index.html">Meteor Game</a>
                     </li>
