--- a/htda/index.html
+++ b/htda/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-<link href="../../core/css/bootstrap.min.css" rel="stylesheet">
-<script src="../../core/js/google.js"></script>
-<script src="../../core/js/bootstrap.min.js"></script>
+<link href="../core/css/bootstrap.min.css" rel="stylesheet">
+<script src="../core/js/google.js"></script>
+<script src="../core/js/bootstrap.min.js"></script>
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -100,7 +100,7 @@
                     <li>
                         <a href="http://stormyjet.com/sNet">sNet</a>
                     </li>-->
-                    <li class="bg-danger"><a href="../../index.html">StormyJet.com</a>
+                    <li class="bg-danger"><a href="../index.html">StormyJet.com</a>
                     </li>
                 </ul>
             </div>
@@ -168,9 +168,9 @@
     window.jQuery || document.write('<script src="../../core/js/vendor/jquery-1.8.2.min.js"><\/script>')
 </script>
 <!--<script src="core/js/vendor/bootstrap.min.js"></script>-->
-<script src="../../core/js/main.js"></script>
+<script src="../core/js/main.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-<script src="../../core/js/docs.min.js"></script>
+<script src="../core/js/docs.min.js"></script>
 </body>
 
 </html>
