--- a/lost.html
+++ b/lost.html
@@ -95,7 +95,7 @@
                     <!--<li>
                         <p class="navbar-text navbar-right">Under Construction |</p>
                     </li>-->
-                    <li class="bg-danger"><a href="stuff/anything/">HTDA</a>
+                    <li class="bg-danger"><a href="htda/">HTDA</a>
                     </li>
                     <li class="bg-info"><a href="http://stormyjet.com/meteor/index.html">Meteor Game</a>
                     </li>
