--- a/404.html
+++ b/404.html
@@ -53,8 +53,8 @@
                             document.write(document.URL);
                         </script>
                         isn't even real.</p>
-                    Maybe you're lost? Click
-                    <p class="lead"><a href="http://stormyjet.com/lost">here</a> for a site map of sorts.
+                    <p class="lead">Maybe you're lost? Click
+                        <a href="http://stormyjet.com/lost">here</a> for a site map of sorts.
                     </p>
                 </body>
             </center>
