--- a/lost.html
+++ b/lost.html
@@ -131,21 +131,24 @@
                 <a href="http://stormyjet.com/meteor">Meteor Game Home</a>
                 <br>
                 <a href="http://stormyjet.com/stuff/anything">How To Do Anything Home</a>
+                <br>
                 <a href="http://stormyjet.com/stuff/pokecrate">Pokecrate Home</a>
                 <br>
-                <hr>None of them? Here are links to other things I have made.
-                <br>
-                <a href="http://stormyjet.com/random/cancer">Cancer Checker</a>
-                <br>
-                <a href="http://stormyjet.com/random/YourMom">Your Mom joke Generator</a>
-                <br>
-                <a href="http://stormyjet.com/random/NubOrNot">Nub or Not?</a>
-                <br>
-                <hr>Still none of them? Thats nearly every page of this site, so why don't you try going to one of the homepages and exploring from there.
-            </p>
-            </center>
+                <hr>
+                <p class="lead">None of them? Here are links to other things I have made.
+                    <br>
+                    <a href="http://stormyjet.com/random/cancer">Cancer Checker</a>
+                    <br>
+                    <a href="http://stormyjet.com/random/YourMom">Your Mom joke Generator</a>
+                    <br>
+                    <a href="http://stormyjet.com/random/NubOrNot">Nub or Not?</a>
+                    <br>
+                    <hr>
+                    <p class="lead">Still none of them? Thats nearly every page of this site, so why don't you try going to one of the homepages and exploring from there.
+                    </p>
+                    </center>
         </div>
-        <hr>
+
         <!-- 
         <div class="row ">
             <div class="col-lg-4 ">
