--- a/404.html
+++ b/404.html
@@ -134,29 +134,30 @@
 
             </div>
             <!--end the gray box-->
-            <p class="lead">Oh No! You're lost. Here's some links to help you on your way.
-                <br>
-                <a href="http://stormyjet.com/">The homepage</a>
-                <br>
-                <a href="http://stormyjet.com/meteor">Meteor Game Home</a>
-                <br>
-                <a href="http://stormyjet.com/stuff/anything">How To Do Anything Home</a>
-                <br>
-                <a href="http://stormyjet.com/stuff/pokecrate">Pokecrate Home</a>
-                <br>
-                <hr>
-                <p class="lead">None of them? Here are links to other things I have made.
+            <center>
+                <p class="lead">Oh No! You're lost. Here's some links to help you on your way.
                     <br>
-                    <a href="http://stormyjet.com/random/cancer">Cancer Checker</a>
+                    <a href="http://stormyjet.com/">The homepage</a>
                     <br>
-                    <a href="http://stormyjet.com/random/YourMom">Your Mom joke Generator</a>
+                    <a href="http://stormyjet.com/meteor">Meteor Game Home</a>
                     <br>
-                    <a href="http://stormyjet.com/random/NubOrNot">Nub or Not?</a>
+                    <a href="http://stormyjet.com/stuff/anything">How To Do Anything Home</a>
+                    <br>
+                    <a href="http://stormyjet.com/stuff/pokecrate">Pokecrate Home</a>
                     <br>
                     <hr>
-                    <p class="lead">Still none of them? Thats nearly every page of this site, so why don't you try going to one of the homepages and exploring from there.
-                    </p>
-                    </center>
+                    <p class="lead">None of them? Here are links to other things I have made.
+                        <br>
+                        <a href="http://stormyjet.com/random/cancer">Cancer Checker</a>
+                        <br>
+                        <a href="http://stormyjet.com/random/YourMom">Your Mom joke Generator</a>
+                        <br>
+                        <a href="http://stormyjet.com/random/NubOrNot">Nub or Not?</a>
+                        <br>
+                        <hr>
+                        <p class="lead">Still none of them? Thats nearly every page of this site, so why don't you try going to one of the homepages and exploring from there.
+                        </p>
+            </center>
         </div>
 
         <!-- 
