--- a/404.html
+++ b/404.html
@@ -126,11 +126,11 @@
                         <!-- Hidden on Non-Mobile-->
                         <h1><strong>You're Lost!</strong></h1>
                     </div>
-                    <h3><p class="notfound">
+                    <h2>
                         <script>
                             document.write(document.URL);
                         </script>
-                        isn't even real.</h3>
+                        isn't even real!</h2>
 
             </div>
             <!--end the gray box-->
@@ -164,9 +164,9 @@
         <div class="row ">
             <div class="col-lg-4 ">
                 <h2>Meteor Game</h2>
-                <p>Meteor Game is a game that I made for no reason. See more info on the site.</p>
-                <p><a class="btn btn-primary " href="meteor/index.html" role="button ">View details &raquo;</a>
-                </p>
+                    <p>Meteor Game is a game that I made for no reason. See more info on the site.</p>
+                    <p><a class="btn btn-primary " href="meteor/index.html" role="button ">View details &raquo;</a>
+                    </p>
             </div>
             <div class="col-lg-4 ">
                 <h2>Hiring</h2>
