--- a/404.html
+++ b/404.html
@@ -128,7 +128,7 @@
                     </div>
                     <h2>
                         <script>
-                            var str = "document.write(document.URL)";
+                            var str = document.write(document.URL);
                             str = str.replace("stormyjet.com", "");
                             document.write(str);
                         </script>
