--- a/404.html
+++ b/404.html
@@ -128,9 +128,10 @@
                     </div>
                     <h2>
                         <script>
-                            var str = document.write(document.URL);
-                            str = str.replace("stormyjet.com", "");
-                            document.write(str);
+                            //var str = ;
+                            //str = str.replace("stormyjet.com", "");
+                            //document.write(str);
+                            document.write(document.URL)
                         </script>
                         isn't even real!</h2>
 
