--- a/404.html
+++ b/404.html
@@ -140,13 +140,13 @@
             <center>
                 <p class="lead">Oh No! You're lost. Here's some links to help you on your way.
                     <br>
-                    <a href="http://stormyjet.com/">The homepage</a>
+                    <a href="http://stormyjet.com/">The Homepage</a>
                     <br>
-                    <a href="http://stormyjet.com/meteor">Meteor Game Home</a>
+                    <a href="http://stormyjet.com/meteor/">Meteor Game Home</a>
                     <br>
-                    <a href="http://stormyjet.com/stuff/anything">How To Do Anything Home</a>
+                    <a href="http://stormyjet.com/htda/">How To Do Anything Home</a>
                     <br>
-                    <a href="http://stormyjet.com/stuff/pokecrate">Pokecrate Home</a>
+                    <a href="http://stormyjet.com/stuff/pokecrate/">Pokecrate Home</a>
                     <br>
                     <hr>
                     <p class="lead">None of them? Here are links to other things I have made.
@@ -157,6 +157,7 @@
                         <br>
                         <a href="http://stormyjet.com/random/NubOrNot">Nub or Not?</a>
                         <br>
+                        <a href="http://stormyjet.com/things">List of Things I made</a>
                         <hr>
                         <p class="lead">Still none of them? Thats nearly every page of this site, so why don't you try going to one of the homepages and exploring from there.
                         </p>
