--- a/htda/index.html
+++ b/htda/index.html
@@ -139,13 +139,14 @@
             <br>
             <br>
             <div class="jumbotron">
-                <strong>How To:</strong>
-                <br>
-                <a href="howto/beinvisible.html">Be essentially invisible</a> (reddit)
-                <br>
-                <kbd>more coming soon</kbd>
+                <center>
+                    <strong>How To:</strong>
+                    <br>
+                    <a href="howto/beinvisible.html">Be essentially invisible</a> (reddit)
+                    <br>
+                    <kbd>more coming soon</kbd>
+                </center>
             </div>
-            </center>
         </div>
         <hr>
         <!-- Footer Begins Here -->
