--- a/404.html
+++ b/404.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-<link href="core/css/bootstrap.min.css" rel="stylesheet">
-<script src="core/js/google.js"></script>
-<script src="core/js/bootstrap.min.js"></script>
+<link href="http://stormyjet.com/core/css/bootstrap.min.css" rel="stylesheet">
+<script src="http://stormyjet.com/core/js/google.js"></script>
+<script src="http://stormyjet.com/core/js/bootstrap.min.js"></script>
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -209,12 +209,12 @@
 <!--Core JS and CSS stuff. Placed at the bottom because I can put it there-->
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
 <script>
-    window.jQuery || document.write('<script src="core/js/vendor/jquery-1.8.2.min.js"><\/script>')
+    window.jQuery || document.write('<script src="http://stormyjet.com/core/js/vendor/jquery-1.8.2.min.js"><\/script>')
 </script>
 <!--<script src="core/js/vendor/bootstrap.min.js"></script>-->
-<script src="core/js/main.js"></script>
+<script src="http://stormyjet.com/core/js/main.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-<script src="core/js/docs.min.js"></script>
+<script src="http://stormyjet.com/core/js/docs.min.js"></script>
 </body>
 
 </html>
