--- a/meteor/index.html
+++ b/meteor/index.html
@@ -46,7 +46,7 @@
                     <!--<li>
                         <a href="http://stormyjet.com/sNet">sNet</a>
                     </li>-->
-                    <li class="bg-danger"><a href="htda/">HTDA</a>
+                    <li class="bg-danger"><a href="../htda/">HTDA</a>
                     </li>
                     <li class="bg-info"><a href="../index.html">Stormy's Wesbite</a>
                     </li>
