--- a/htda/list.html
+++ b/htda/list.html
@@ -73,9 +73,9 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li class="active"><a href="#">Home</a>
+                    <li><a href="index.html">Home</a>
                     </li>
-                    <li><a href="list.html">List</a>
+                    <li class="active"><a href="#">List</a>
                     </li>
                     <!--<li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Things I Made<span class="caret"></span></a>
@@ -121,32 +121,55 @@
     <div class="container">
         <div>
             <div class="jumbotron">
-                <center>
-                    <div class="hidden-xs hidden-sm">
-                        <!--Hidden on Mobile-->
-                        <p style="font-size:750%;word-wrap:break-word;">How To Do Anything</p>
-                    </div>
-                    <div class="hidden-md hidden-lg">
-                        <!-- Hidden on Non-Mobile-->
-                        <h1><strong>How To Do Anything</strong></h1>
-                    </div>
-                    <!--Candies are shown here, if they don't load, the text is shown-->
-                    <div id="candy" class="subtext">according to the internet</div>
-
+                <h1>Organized List of all HTDAs</h1>
             </div>
             <!--end the gray box-->
-            <p class="lead">Hello! This is the website for How to do Anything, according to the internet. Here will be collected facts on how to do nearly anything you will ever need. It may not be 100% accurate, but it will consist of the facts brought to you by 4chan, Reddit, and more.</p>
+
             <br>
             <br>
             <div class="jumbotron">
                 <center>
-                    <strong>How To:</strong>
+                    <strong>HTDA from Reddit</strong>
                     <br>
-                    <a href="howto/beinvisible.html">Be essentially invisible</a> (reddit)
+                    <a href="howto/beinvisible.html">Be essentially invisible</a>
                     <br>
                     <kbd>more coming soon</kbd>
                 </center>
             </div>
+            <br>
+
+            <div class="jumbotron">
+                <center>
+                    <strong>HTDA from 4Chan</strong>
+                    <br>
+                    <kbd>more coming soon</kbd>
+                </center>
+            </div>
+            <br>
+            <div class="jumbotron">
+                <center>
+                    <strong>HTDA from Tumblr</strong>
+                    <br>
+                    <kbd>more coming soon</kbd>
+                </center>
+            </div>
+            <br>
+            <div class="jumbotron">
+                <center>
+                    <strong>HTDA from YouTube</strong>
+                    <br>
+                    <kbd>more coming soon</kbd>
+                </center>
+            </div>
+            <br>
+            <div class="jumbotron">
+                <center>
+                    <strong>HTDA from Other Places on the Net</strong>
+                    <br>
+                    <kbd>more coming soon</kbd>
+                </center>
+            </div>
+            <br>
         </div>
         <hr>
         <!-- Footer Begins Here -->
