--- a/htda/howto/beinvisible.html
+++ b/htda/howto/beinvisible.html
@@ -75,6 +75,8 @@
                 <ul class="nav navbar-nav">
                     <li><a href="../index.html">Home</a>
                     </li>
+                    <li><a href="../list.html">List</a>
+                    </li>
                     <li class="active"><a href="#">How To: Be essentially invisible</a>
                     </li>
                     <!--<li class="dropdown">
