--- a/things.html
+++ b/things.html
@@ -137,7 +137,7 @@
                 <a href="random/YourMom.html">And the Your Mom Joke Maker</a>  <kbd>[Under Construction]</kbd>
                 <br>I also make <em>very</em> bad <a href="https://www.youtube.com/user/ItsStormyJet">YouTube</a> videos.
                 <br>I also make and sometimes maintain a game called <a href="meteor/index.html">Meteor Game</a>. It's quite hard.
-                <br>I'm in the process of making <a href="stuff/anything/index.html">How To Do Anything</a>. A guide on, well, how to do anything! <kbd>[Under Construction]</kbd>
+                <br>I'm in the process of making <a href="htda/">How To Do Anything</a>. A guide on, well, how to do anything! <kbd>[Under Construction]</kbd>
                 <br>You can stalk me at my<a href="http://twitter.com/stormyjet"> Twitter </a>and not Facebook because I don't have one.
                 <br>
             </p>
