--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <link href="core/css/bootstrap.min.css" rel="stylesheet">
 <script src="core/js/candy.js"></script>
 <script src="core/js/google.js"></script>
-<script src="core/js/bootstrap.min.js"></script>
+<script src="core/js/bootstrap.js"></script>
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
