ARE THEY FASTENED?

--- a/meteor/index.html
+++ b/meteor/index.html
@@ -48,7 +48,7 @@
                     </li>-->
                     <li class="bg-danger"><a href="../htda/">HTDA</a>
                     </li>
-                    <li class="bg-info"><a href="../index.html">Stormy's Wesbite</a>
+                    <li class="bg-primary"><a href="../index.html">Stormy's Wesbite</a>
                     </li>
                 </ul>
             </div>
