--- a/htda/index.html
+++ b/htda/index.html
@@ -100,7 +100,7 @@
                     <li>
                         <a href="http://stormyjet.com/sNet">sNet</a>
                     </li>-->
-                    <li class="bg-primary"><a href="../index.html">StormyJet.com</a>
+                    <li class="bg-primary"><a style="color:white" href="../index.html">StormyJet.com</a>
                     </li>
                 </ul>
             </div>
