--- a/htda/howto/beinvisible.html
+++ b/htda/howto/beinvisible.html
@@ -102,7 +102,7 @@
                     <li>
                         <a href="http://stormyjet.com/sNet">sNet</a>
                     </li>-->
-                    <li class="bg-primary"><a href="../../index">StormyJet.com</a>
+                    <li class="bg-primary"><a style="color:white" href="../../index">StormyJet.com</a>
                     </li>
                 </ul>
             </div>
