--- a/meteor/index.html
+++ b/meteor/index.html
@@ -42,13 +42,13 @@
                 <ul class="nav navbar-nav navbar-right">
                     <!--<li>
                         <p class="navbar-text navbar-right">Other Things</p>
-                    </li>-->
-                    <!--<li>
-                        <a href="http://stormyjet.com/sNet">sNet</a>
-                    </li>-->
-                    <li class="bg-danger"><a href="../htda/">HTDA</a>
                     </li>
-                    <li class="bg-primary"><a href="../index.html">Stormy's Wesbite</a>
+                    <li>
+                        <a href="http://stormyjet.com/sNet">sNet</a>
+                    </li>
+                    <li class="bg-danger"><a href="../htda/">HTDA</a>
+                    </li>-->
+                    <li class="bg-primary"><a style="color:white" href="../index.html">Main Site</a>
                     </li>
                 </ul>
             </div>
