--- a/random/burn.html
+++ b/random/burn.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr" class="client-nojs">
+<script src="../core/js/google.js"></script>
 
 <head>
     <meta charset="UTF-8" />
