--- a/random/burn.html
+++ b/random/burn.html
@@ -399,7 +399,7 @@ Lua memory usage: 1.79 MB/50 MB
             <div id='catlinks' class='catlinks'>
                 <div id="mw-normal-catlinks" class="mw-normal-catlinks"><a href="/wiki/Help:Category" title="Help:Category">Categories</a>:
                     <ul>
-                        <li><a href="/wiki/Category:Lists_of_hospitals_in_the_United_States" title="Category:Lists of hospitals in the United States">Lists of hospitals in the United States</a>
+                        <li><a href="/wiki/Category:Lists_of_hospitals_in_the_United_States" title="Category:Lists of hospitals in the United States">Lists of stupid jokes</a>
                         </li>
                     </ul>
                 </div>
