--- a/topsecret.html
+++ b/topsecret.html
@@ -16,4 +16,10 @@
     </audio>
 </center>
 
+click the picture to go back to home page
+<br>
+<br>
+
+<a href="http://spody.org/flash/DAILYDOSE.swf">or go deeper into the rabbit hole.</a>
+
 </html>
